# open-r1

./: .gitignore  Makefile  data  main.py  pyproject.toml  requirements.txt  run_grpo_server.sh  run_grpo_train.sh  run_grpo_train_05.sh  run_grpo_train_1.5B.sh  run_grpo_train_15.sh  run_grpo_train_3B.sh  run_grpo_train_7B.sh  run_port_forward.sh  run_sft_train.sh  test.ipynb
make_data_tool/data1/: create_dataset.py  train.csv  val.csv  中医药题库3中文版.xlsx  中药学题库1 中文版xlsx[51].xlsx  中药学题库2中文版.xlsx  中药题库中文版_清除版版.xlsx
make_data_tool/data2/: create_dataset.py  train.csv  val.csv  数据汇总.xlsx
make_data_tool/data3/: 中医基础学.csv  儿科学.csv  内科学.csv  基础学.csv  外科学.csv  方剂学.csv  诊断学.csv
recipes/DeepSeek-R1-Distill-Qwen-7B/grpo/: config_demo.yaml
recipes/Qwen2.5-0.5B-Instruct/grpo/: config_demo.yaml  config_demo_code.yaml  config_demo_code_ioi.yaml
recipes/Qwen2.5-1.5B-Instruct/sft/: config_demo.yaml
recipes/Qwen2.5-3B-Instruct/grpo/: config_demo.yaml
recipes/Qwen2.5-7B-Instruct/grpo/: config_demo.yaml
recipes/accelerate_configs/: zero2_offload_cpu.yaml  zero3_offload_disk.yaml
src/open_r1/: grpo_ctm.py  rewards.py
