[project]
name = "open-r1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.0",
    "deepspeed>=0.16.7",
    "distilabel[openai,ray,vllm]>=1.5.3",
    "e2b-code-interpreter>=1.2.1",
    "huggingface-hub[cli,hf-xet]>=0.30.2",
    "math-verify>=0.7.0",
    "packaging>=25.0",
    "parameterized>=0.9.0",
    "peft>=0.15.2",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "setuptools>=79.0.0",
    "trl>=0.16.1",
    "vllm==0.8.3",
]
